# GCMicrolensing

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CITATION.cff  MANIFEST.in  README.md  agents.md  environment.yml  pyproject.toml  requirements-dev.txt  setup.py
.github/scripts/: bump_version.py  setup_pypi.md
.github/workflows/: ci.yml  pytest.yml  release.yml
GCMicrolensing/: TestML.py  __init__.py  models.py
GCMicrolensing.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
GCMicrolensing/triplelens/: MANIFEST.in  __init__.py  setup.py
Microlensing/: TestML.py  Testing.py
docs/: Makefile  conf.py  generate_animation.py  index.rst  installation.rst  requirements.txt
docs/Notebooks/: 2L.ipynb  ComparingLightCurves.ipynb
docs/api/: models.rst
tests/: conftest.py  test_lightcurves.py  test_models.py
triplelens/: setup.cfg  setup.py
triplelens/TripleLensing.egg-info/: PKG-INFO  SOURCES.txt
triplelens/pymodule/: python_bindings.cpp
triplelens/src/: TripleLensingLibrary.cpp  VBBinaryLensingLibrary.cpp  VBBinaryLensingLibrary.h
triplelens/test/: testtriple.cpp  utils.py
